:feat: profile user

--- a/src/app/components/users/profile/profile.component.html
+++ b/src/app/components/users/profile/profile.component.html
@@ -6,8 +6,8 @@
       </div>
       <div class="row user-details">
         <div class="col-12">
-          <img src="../../../../assets/check-user.png" class="rounded-circle img-thumbnail" alt="profile">
-          <h5>{{user.name}}</h5>
+          <img src="{{user.photoUrl}}" class="rounded-circle img-thumbnail" alt="profile">
+          <h5 *ngIf="providerId != 'password'">{{user.name}}</h5>
           <p>
             {{user.email}}
           </p>
