:feat: Add many changes

--- a/src/app/components/admin/list-books/list-books.component.html
+++ b/src/app/components/admin/list-books/list-books.component.html
@@ -1,19 +1,36 @@
-<p>
-  list-books works!
-</p>
-
-<p>
-  list-books works!
-</p>
-<p>
-  list-books works!
-</p>
-<p>
-  list-books works!
-</p>
-<p>
-  list-books works!
-</p>
-<p>
-  list-books works!
-</p>
+<section class="row mt-5">
+  <div class="col">
+    <button class="btn btn-primary float-right mb-3" data-toggle="modal" data-target="#modalBook">New Book</button>
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Titulo</th>
+          <th scope="col">Autor</th>
+          <th scope="col">Idioma</th>
+          <th scope="col">Precio</th>
+          <th scope="col">Oferta</th>
+          <th scope="col">&nbsp;</th>
+          <th scope="col">&nbsp;</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let book of books; index as i">
+          <th scope="row">{{i+1}}</th>
+          <td>{{book.titulo}}</td>
+          <td>{{book.autor}}</td>
+          <td>{{book.idioma}}</td>
+          <td>{{book.precio}}</td>
+          <td>{{book.oferta == 1 ? 'Sí': 'No'}}</td>
+          <td>
+            <button class="btn btn-primary" data-toggle="modal" data-target="#modalBook" (click)="onPreUpdateBook(book)">Update</button>
+          </td>
+          <td>
+            <button class="btn btn-danger" (click)="onDeleteBook(book.id)">Delete</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</section>
+<app-modal></app-modal>
