--- a/src/app/components/details-book/details-book.component.html
+++ b/src/app/components/details-book/details-book.component.html
@@ -1,3 +1,22 @@
-<p>
-  details-book works!
-</p>
+<section id="book" class="mt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-4 mx-auto">
+        <div class="card_book">
+          <div class="card">
+            <div class="card-body text-center">
+              <p>
+                <img class="img-fluid" src="{{book.portada}}" alt="{{book.titulo}}">
+              </p>
+              <h4 class="card-title">{{book.titulo}}</h4>
+              <p class="card-text">
+                {{book.descripcion}}
+              </p>
+              <a href="{{book.link_amazon}}" target="_blank" class="btn btn-block btn-primary">Buy</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
