--- a/src/app/components/offers/offers.component.html
+++ b/src/app/components/offers/offers.component.html
@@ -1,4 +1,4 @@
-<section id="books">
+<section id="books" class="mt-5">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-4" *ngFor="let book of books">
